--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@types/pdf-parse": "^1.1.5",
+    "idb-keyval": "^6.2.2",
+    "lucide-react": "^0.554.0",
+    "mermaid": "latest",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.394",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.30.0",
-    "lucide-react": "^0.554.0",
     "react-markdown": "^10.1.0",
-    "recharts": "^3.5.0",
-    "mermaid": "latest"
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "jsdom": "^27.2.0",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^4.0.14"
   }
 }
